# deb-builder

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deb_builder.opam  dune-project  flake.nix  opam.export
.github/workflows/: ci.yml
ci/: Makefile
ci/res/: defaults.json
ci/scripts/: build_app.sh  build_debian.sh  build_docker.sh  helpers.sh  test_app.sh
ci/src/: Base.dhall  BuildAndSign.dhall  Images.dhall  Lints.dhall  Pipeline.dhall
ci/src/Commands/: BuildAndSign.dhall  Lints.dhall  Test.dhall
docs/: session-manifest.md
examples/manifests/: README.md  simple-rename.json
examples/manifests/variant-bundle/: README.md  plan.json
lib/: builder.ml  content_verifier.ml  templates.ml
src/: cli.rs  main.rs  viewer.rs
src/lib/: builder.ml  content_verifier.ml  defaults.ml  dune  misc.ml  signature_verifier.ml  signer.ml  viewer.ml
src/session/: apply.rs  mod.rs
src/test/: dune  test_deb_builder.ml
src/test/res/build_dir/: example-app_1.0.0.deb
test/: dune  test_deb_builder.ml
test/output/: example-app_1.0.0.deb
tests/: session_apply.rs  session_hardfork_scenario.rs  session_roundtrip.rs  session_variant_scenario.rs
tests/common/: mod.rs
